--- a/style.css
+++ b/style.css
@@ -1,88 +1,95 @@
-* {
-  margin: 0px;
-  padding: 0px;
-  box-sizing: border-box;
-}
-body {
-  background-image: linear-gradient(90deg, rgb(15, 12, 12), rgb(15, 95, 28));
-  font-family: "Times New Roman", Times, serif;
-  display: flex;
-  justify-content: center;
-  align-content: center;
-  /* min-height: 100vh; */
-  /* margin: 0px; */
-  /* margin-top: 10px; */
+@import url("https://fonts.googleapis.com/css?family=Open+Sans&display=swap");
+
+:root {
+  --success-color: #2ecc71;
+  --error-color: #e74c3c;
 }
 
-h1 {
-  margin-bottom: 10px;
-  text-align: center;
+* {
+  box-sizing: border-box;
 }
+
+body {
+  background-color: #f9fafb;
+  font-family: "Open Sans", sans-serif;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+  margin: 0;
+}
+
 .container {
-  background-color: rgb(255, 255, 255);
-  border-radius: 15px;
-  box-shadow: 0 2px 10px #011104;
-  margin-top: 50px;
-  /* padding: 10px; */
+  background-color: #fff;
+  border-radius: 5px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
+  width: 400px;
+}
+
+h2 {
+  text-align: center;
+  margin: 0 0 20px;
 }
 
 .form {
-  padding: 20px 20px;
-  margin-bottom: auto;
-  width: 450px;
+  padding: 30px 40px;
 }
 
 .form-control {
-  margin-bottom: auto;
-  padding: 5px;
+  margin-bottom: 10px;
+  padding-bottom: 20px;
   position: relative;
 }
+
 .form-control label {
-  color: rgb(0, 0, 0);
+  color: #777;
   display: block;
-  font-size: 18px;
+  margin-bottom: 5px;
 }
 
 .form-control input {
-  border: 2px solid #c2bdbd;
-  border-radius: 5px;
+  border: 2px solid #f0f0f0;
+  border-radius: 4px;
+  display: block;
   width: 100%;
   padding: 10px;
-  font-size: 16px;
+  font-size: 14px;
 }
 
 .form-control input:focus {
-  border-color: rgba(58, 56, 58, 0.664);
-  outline: 0px;
+  outline: 0;
+  border-color: #777;
 }
 
 .form-control.success input {
-  border-color: lightseagreen;
+  border-color: var(--success-color);
 }
 
 .form-control.error input {
-  border-color: rgb(223, 16, 16);
+  border-color: var(--error-color);
 }
 
 .form-control small {
-  visibility: hidden;
-  color: rgb(223, 16, 16);
+  color: var(--error-color);
+  position: absolute;
   bottom: 0;
   left: 0;
+  visibility: hidden;
 }
+
 .form-control.error small {
   visibility: visible;
 }
 
 .form button {
-  background-color: #3498db;
-  border: 5px solid #3498db;
-  padding: 10px;
-  color: #fff;
   cursor: pointer;
+  background-color: #3498db;
+  border: 2px solid #3498db;
+  border-radius: 4px;
+  color: #fff;
   display: block;
+  font-size: 16px;
+  padding: 10px;
+  margin-top: 20px;
   width: 100%;
-  border-radius: 5px;
-  font-size: 20px;
-  /* margin-top: 10px; */
 }
